update for adopt donate buttons

--- a/Adopt/CSS/style.css
+++ b/Adopt/CSS/style.css
@@ -7,6 +7,27 @@
 		background-color:rgb(32, 33, 98);
 
 	}
+	
+	a{
+		text-decoration: none;
+		color:white;
+	}
+
+	a:hover{
+		text-decoration: none;
+		color:#fc8359;
+	}
+
+	.adopt a{
+		text-decoration: none;
+		color:#fc8359;
+	}
+
+	.adopt a:hover{
+		text-decoration: none;
+		color:white;
+	}
+
 
 	nav{
 		height:68px;
